tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_expression_extern.objc3
module MisplacedQualifierExpressionExtern;

fn main() -> i32 {
  return extern;
}